@@ -1,5 +1,6 @@
 package dev.imb11.skinshuffle.client.gui.carousels;
 
+import com.mojang.blaze3d.Blaze3D;
 import dev.imb11.skinshuffle.SkinShuffle;
 import dev.imb11.skinshuffle.client.config.CarouselView;
 import dev.imb11.skinshuffle.client.config.SkinPresetManager;
@@ -19,16 +20,17 @@ import dev.lambdaurora.spruceui.tooltip.Tooltip;
 import dev.lambdaurora.spruceui.widget.SpruceButtonWidget;
 import dev.lambdaurora.spruceui.widget.SpruceIconButtonWidget;
 import dev.lambdaurora.spruceui.widget.SpruceWidget;
-import net.minecraft.client.gui.DrawContext;
-import net.minecraft.client.gui.screen.Screen;
-import net.minecraft.client.util.GlfwUtil;
-import net.minecraft.screen.ScreenTexts;
-import net.minecraft.text.Text;
-import net.minecraft.util.math.MathHelper;
-
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Optional;
+
+import net.minecraft.client.Minecraft;
+import net.minecraft.client.gui.GuiGraphicsExtractor;
+import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.client.input.MouseButtonEvent;
+import net.minecraft.network.chat.CommonComponents;
+import net.minecraft.network.chat.Component;
+import net.minecraft.util.Mth;
 
 public abstract class CarouselScreen extends SpruceScreen {
     public static final double scaleFactor = 1.0D;
@@ -36,7 +38,7 @@ public abstract class CarouselScreen extends SpruceScreen {
     public final CarouselView viewType;
     public final CarouselView nextViewType;
     public boolean hasEditedPreset = false;
-    public ArrayList<AbstractCardWidget<?>> carouselWidgets = new ArrayList<>();
+    public ArrayList<AbstractCardWidget<CarouselScreen>> carouselWidgets = new ArrayList<>();
     protected SpruceIconButtonWidget configButton;
     protected SpruceIconButtonWidget viewTypeButton;
     protected SpruceButtonWidget cancelButton;
@@ -46,7 +48,7 @@ public abstract class CarouselScreen extends SpruceScreen {
     private double lastCardSwitchTime = 0;
 
     public CarouselScreen(Screen parent, CarouselView viewType, CarouselView nextViewType) {
-        super(Text.translatable("skinshuffle.carousel.title"));
+        super(Component.translatable("skinshuffle.carousel.title"));
         this.parent = parent;
         this.viewType = viewType;
         this.nextViewType = nextViewType;
@@ -58,7 +60,7 @@ public abstract class CarouselScreen extends SpruceScreen {
         carouselWidgets.clear();
 
         var loadedPresets = SkinPresetManager.getLoadedPresets();
-        for (var preset : loadedPresets) {
+        for (SkinPreset preset : loadedPresets) {
             var presetWidget = this.widgetFromPreset(preset);
             this.carouselWidgets.add(presetWidget);
         }
@@ -69,7 +71,7 @@ public abstract class CarouselScreen extends SpruceScreen {
             SkinPreset unnamed = new SkinPreset(Skin.randomDefaultSkin());
             SkinPresetManager.addPreset(unnamed);
             var newWidget = this.loadPreset(unnamed);
-            this.addDrawableChild(newWidget);
+            this.addRenderableWidget(newWidget);
         });
         this.carouselWidgets.add(addPresetWidget);
 
@@ -87,35 +89,35 @@ public abstract class CarouselScreen extends SpruceScreen {
         }
 
         for (SpruceWidget presetCards : this.carouselWidgets) {
-            this.addDrawableChild(presetCards);
+            this.addRenderableWidget(presetCards);
         }
 
-        this.cancelButton = this.addDrawableChild(new SpruceButtonWidget(Position.of(this.width / 2 - 128 - 5, this.height - 23), 128, 20, ScreenTexts.CANCEL, button -> {
-            this.close();
+        this.cancelButton = this.addRenderableWidget(new SpruceButtonWidget(Position.of(this.width / 2 - 128 - 5, this.height - 23), 128, 20, CommonComponents.GUI_CANCEL, button -> {
+            this.onClose();
         }));
 
-        this.configButton = this.addDrawableChild(new SkinShuffleIconButton(Position.of(2, 2), 20, 20, Text.empty(),
-                (btn) -> this.client.setScreenAndRender(GeneratedScreens.getConfigScreen(this)),
+        this.configButton = this.addRenderableWidget(new SkinShuffleIconButton(Position.of(2, 2), 20, 20, Component.empty(),
+                (btn) -> this.minecraft.setScreenAndShow(GeneratedScreens.getConfigScreen(this)),
                 (btn) -> SkinShuffle.id("textures/gui/config-button-icon.png")));
-        this.configButton.setTooltip(Text.translatable("skinshuffle.carousel.config_button.tooltip"));
+        this.configButton.setTooltip(Component.translatable("skinshuffle.carousel.config_button.tooltip"));
 
-        this.viewTypeButton = this.addDrawableChild(new SkinShuffleIconButton(Position.of(24, 2), 20, 20, Text.empty(), (btn) -> {
-            this.client.setScreenAndRender(nextViewType.factory.apply(this.parent));
+        this.viewTypeButton = this.addRenderableWidget(new SkinShuffleIconButton(Position.of(24, 2), 20, 20, Component.empty(), (btn) -> {
+            this.minecraft.setScreenAndShow(nextViewType.factory.apply(this.parent));
             SkinShuffleConfig.get().carouselView = nextViewType;
             SkinShuffleConfig.save();
         }, (btn) -> viewType.iconTexture));
         this.viewTypeButton.setTooltip(viewType.tooltip);
 
-        this.selectButton = this.addDrawableChild(new SpruceButtonWidget(Position.of(this.width / 2 + 5, this.height - 23), 128, 20, Text.translatable("skinshuffle.carousel.save_button"), button -> {
+        this.selectButton = this.addRenderableWidget(new SpruceButtonWidget(Position.of(this.width / 2 + 5, this.height - 23), 128, 20, Component.translatable("skinshuffle.carousel.save_button"), button -> {
             if (Math.round(cardIndex) >= 0 && Math.round(cardIndex) < this.carouselWidgets.size()) {
                 SpruceWidget chosenPresetWidget = this.carouselWidgets.get((int) Math.round(cardIndex));
 
                 if (chosenPresetWidget instanceof AddCardWidget) {
-                    this.close();
+                    this.onClose();
                     return;
                 }
 
-                if (chosenPresetWidget instanceof PresetWidget presetWidget) {
+                if (chosenPresetWidget instanceof PresetWidget<?> presetWidget) {
                     SkinPresetManager.setChosenPreset(presetWidget.getPreset(), this.hasEditedPreset);
                     SkinPresetManager.savePresets();
                 }
@@ -128,16 +130,16 @@ public abstract class CarouselScreen extends SpruceScreen {
     }
 
     public void handleCloseBehaviour() {
-        if (this.client.world != null && !SkinShuffleConfig.get().disableAPIUpload && !ClientSkinHandling.isInstalledOnServer()) {
-            this.client.setScreen(GeneratedScreens.getReconnectScreen(this.parent));
+        if (this.minecraft.level != null && !SkinShuffleConfig.get().disableAPIUpload && !ClientSkinHandling.isInstalledOnServer()) {
+            this.minecraft.setScreen(GeneratedScreens.getReconnectScreen(this.parent));
         } else {
-            this.close();
+            this.onClose();
         }
     }
 
     @Override
-    public void close() {
-        this.client.setScreen(parent);
+    public void onClose() {
+        this.minecraft.setScreen(parent);
 
         // Save all presets to config when closing the screen, skipping any we can't
         for (var preset : SkinPresetManager.getLoadedPresets()) {
@@ -152,13 +154,13 @@ public abstract class CarouselScreen extends SpruceScreen {
     }
 
     @Override
-    public void render(SpruceGuiGraphics graphics, int mouseX, int mouseY, float delta) {
+    public void extractRenderState(SpruceGuiGraphics graphics, int mouseX, int mouseY, float delta) {
         var cardAreaWidth = getCardWidth() + getCardGap();
 
-        graphics.fill(0, this.textRenderer.fontHeight * 3, this.width, this.height - (this.textRenderer.fontHeight * 3), 0x7F000000);
+        graphics.fill(0, this.font.lineHeight * 3, this.width, this.height - (this.font.lineHeight * 3), 0x7F000000);
 
-        graphics.fillGradient(0, (int) (this.textRenderer.fontHeight * 2.75), this.width, this.textRenderer.fontHeight * 3, 0x00000000, 0x00000000, 0x7F000000, 0x7F000000);
-        graphics.fillGradient(0, this.height - (this.textRenderer.fontHeight * 3), this.width, (int) (this.height - (this.textRenderer.fontHeight * 2.75)), 0x7F000000, 0x7F000000, 0x00000000, 0x00000000);
+        graphics.fillGradient(0, (int) (this.font.lineHeight * 2.75), this.width, this.font.lineHeight * 3, 0x00000000, 0x00000000, 0x7F000000, 0x7F000000);
+        graphics.fillGradient(0, this.height - (this.font.lineHeight * 3), this.width, (int) (this.height - (this.font.lineHeight * 2.75)), 0x7F000000, 0x7F000000, 0x00000000, 0x00000000);
 
         // Carousel Widgets
         int rows = getRows();
@@ -217,14 +219,14 @@ public abstract class CarouselScreen extends SpruceScreen {
             refreshPresetState();
         }
 
-        this.renderWidgets(graphics, mouseX, mouseY, delta);
+        this.extractWidgets(graphics, mouseX, mouseY, delta);
 
         this.renderTitle(graphics.vanilla(), mouseX, mouseY, delta);
-        Tooltip.renderAll(graphics.vanilla());
+        Tooltip.extractAllRenderStates(graphics.vanilla());
     }
 
-    public void renderTitle(DrawContext graphics, int mouseX, int mouseY, float delta) {
-        graphics.drawCenteredTextWithShadow(this.textRenderer, this.getTitle().asOrderedText(), this.width / 2, this.textRenderer.fontHeight, 0xFFFFFFFF);
+    public void renderTitle(GuiGraphicsExtractor graphics, int mouseX, int mouseY, float delta) {
+        graphics.centeredText(this.font, this.getTitle().getVisualOrderText(), this.width / 2, this.font.lineHeight, 0xFFFFFFFF);
     }
 
     public void scrollCarousel(double amount, boolean wrapAround) {
@@ -239,7 +241,7 @@ public abstract class CarouselScreen extends SpruceScreen {
             cardIndex = (cardIndex + this.carouselWidgets.size()) % this.carouselWidgets.size();
         }
         //noinspection IntegerDivisionInFloatingPointContext
-        cardIndex = MathHelper.clamp(cardIndex, 0, (this.carouselWidgets.size() - 1) / getRows() * getRows());
+        cardIndex = Mth.clamp(cardIndex, 0, (this.carouselWidgets.size() - 1) / getRows() * getRows());
 
         setCardIndex(cardIndex);
     }
@@ -259,10 +261,10 @@ public abstract class CarouselScreen extends SpruceScreen {
     }
 
     @Override
-    public boolean mouseReleased(double mouseX, double mouseY, int button) {
+    public boolean mouseReleased(MouseButtonEvent event) {
         carouselWidgets.forEach(widget -> widget.setDragging(false));
 
-        return super.mouseReleased(mouseX, mouseY, button);
+        return super.mouseReleased(event);
     }
 
     protected abstract int getRows();
@@ -283,18 +285,18 @@ public abstract class CarouselScreen extends SpruceScreen {
         return false;
     }
 
-    protected abstract AbstractCardWidget widgetFromPreset(SkinPreset preset);
+    protected abstract AbstractCardWidget<CarouselScreen> widgetFromPreset(SkinPreset preset);
 
     private double getDeltaScrollIndex() {
-        var deltaTime = (GlfwUtil.getTime() - lastCardSwitchTime) * 5;
-        deltaTime = MathHelper.clamp(deltaTime, 0, 1);
+        var deltaTime = (Blaze3D.getTime() - lastCardSwitchTime) * 5;
+        deltaTime = Mth.clamp(deltaTime, 0, 1);
         deltaTime = Math.sin(deltaTime * Math.PI / 2);
-        return MathHelper.lerp(deltaTime, lastCardIndex, cardIndex);
+        return Mth.lerp(deltaTime, lastCardIndex, cardIndex);
     }
 
-    public AbstractCardWidget loadPreset(SkinPreset preset) {
+    public AbstractCardWidget<CarouselScreen> loadPreset(SkinPreset preset) {
         var widget = widgetFromPreset(preset);
-        this.carouselWidgets.get(this.carouselWidgets.size() - 1).refreshLastPosition();
+        this.carouselWidgets.getLast().refreshLastPosition();
         this.carouselWidgets.add(this.carouselWidgets.set(this.carouselWidgets.size() - 1, widget));
         refreshPresetState();
         return widget;
@@ -324,7 +326,7 @@ public abstract class CarouselScreen extends SpruceScreen {
 
     public void setCardIndex(double index) {
         lastCardIndex = getDeltaScrollIndex();
-        lastCardSwitchTime = GlfwUtil.getTime();
+        lastCardSwitchTime = Blaze3D.getTime();
         cardIndex = index;
     }
 
@@ -335,5 +337,6 @@ public abstract class CarouselScreen extends SpruceScreen {
     public void refresh() {
         this.children().clear();
         this.init();
+        Minecraft.getInstance().setScreen(this);
     }
 }
